v0.1a0/_sources/gallery/vector_uncoupled.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_vector_uncoupled.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_vector_uncoupled.py:


Gridding 2D vectors (uncoupled)
===============================

We can use :class:`verde.Components` to simultaneously process and grid all
components of vector data. Each component is processed and gridded separately (see
:class:`verde.VectorSpline2D` for a coupled alternative) but we have the convenience of
dealing with a single estimator. :class:`verde.Components` can be combined with
:class:`verde.Trend`, :class:`verde.Spline`, and :class:`verde.Chain` to create a full
processing pipeline.




.. image:: /gallery/images/sphx_glr_vector_uncoupled_001.png
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    station_id           ...            wind_speed_north_knots
    0        0F2           ...                         -2.357185
    1        11R           ...                          2.982564
    2        2F5           ...                         -0.311412
    3        3T5           ...                          3.018448
    4        5C1           ...                          1.090743

    [5 rows x 6 columns]
    Chain(steps=[('mean', BlockReduce(adjust='spacing', center_coordinates=False,
          reduction=<function mean at 0x14ecd05ca2f0>, region=None,
          spacing=37000.0)), ('trend', Components(components=[Trend(degree=1), Trend(degree=1)])), ('spline', Components(components=[Spline(damping=1e-10, engine='auto', mindist=500000.0, region=None,
        shape=None, spacing=None), Spline(damping=1e-10, engine='auto', mindist=500000.0, region=None,
        shape=None, spacing=None)]))])
    Cross-validation R^2 score: 0.78




|


.. code-block:: python

    import matplotlib.pyplot as plt
    import cartopy.crs as ccrs
    import numpy as np
    import pyproj
    import verde as vd


    # Fetch the wind speed data from Texas.
    data = vd.datasets.fetch_texas_wind()
    print(data.head())

    # Separate out some of the data into utility variables
    coordinates = (data.longitude.values, data.latitude.values)
    region = vd.get_region(coordinates)
    # Use a Mercator projection because Spline is a Cartesian gridder
    projection = pyproj.Proj(proj="merc", lat_ts=data.latitude.mean())

    # Split the data into a training and testing set. We'll fit the gridder on the training
    # set and use the testing set to evaluate how well the gridder is performing.
    train, test = vd.train_test_split(
        projection(*coordinates),
        (data.wind_speed_east_knots, data.wind_speed_north_knots),
        random_state=2,
    )

    # We'll make a 30 arc-minute grid in the end.
    spacing = 20 / 60

    # Chain together a blocked mean to avoid aliasing, a polynomial trend (Spline usually
    # requires de-trended data), and finally a Spline for each component. Notice that
    # BlockReduce can work on multicomponent data without the use of Components.
    chain = vd.Chain(
        [
            ("mean", vd.BlockReduce(np.mean, spacing * 111e3)),
            ("trend", vd.Components([vd.Trend(degree=1) for i in range(2)])),
            (
                "spline",
                vd.Components([vd.Spline(damping=1e-10, mindist=500e3) for i in range(2)]),
            ),
        ]
    )
    print(chain)
    # Fit on the training data
    chain.fit(*train)
    # And score on the testing data. The best possible score is 1, meaning a perfect
    # prediction of the test data.
    score = chain.score(*test)
    print("Cross-validation R^2 score: {:.2f}".format(score))

    # Interpolate the wind speed onto a regular geographic grid and mask the data that are
    # far from the observation points
    mask = vd.distance_mask(coordinates, maxdist=1, region=region, spacing=spacing)
    grid = chain.grid(
        region, spacing=spacing, projection=projection, dims=["latitude", "longitude"]
    )
    grid = grid.where(mask)

    # Make maps of the original and gridded wind speed
    plt.figure(figsize=(6, 6))
    ax = plt.axes(projection=ccrs.Mercator())
    ax.set_title("Uncoupled spline gridding of wind speed")
    tmp = ax.quiver(
        grid.longitude.values,
        grid.latitude.values,
        grid.east_component.values,
        grid.north_component.values,
        width=0.0015,
        scale=100,
        color="tab:blue",
        transform=ccrs.PlateCarree(),
        label="Interpolated",
    )
    ax.quiver(
        *coordinates,
        data.wind_speed_east_knots.values,
        data.wind_speed_north_knots.values,
        width=0.003,
        scale=100,
        color="tab:red",
        transform=ccrs.PlateCarree(),
        label="Original",
    )
    ax.quiverkey(tmp, 0.17, 0.23, 5, label="5 knots", coordinates="figure")
    ax.legend(loc="lower left")
    # Use an utility function to add tick labels and land and ocean features to the map.
    vd.datasets.setup_texas_wind_map(ax)
    plt.tight_layout()
    plt.show()

**Total running time of the script:** ( 0 minutes  0.115 seconds)


.. _sphx_glr_download_gallery_vector_uncoupled.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: vector_uncoupled.py <vector_uncoupled.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: vector_uncoupled.ipynb <vector_uncoupled.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
